# python-project-lvl1

./: README.md  pyproject.toml
.github/workflows/: checks.yml  lint-check.yml
brain_games/: common_games_funcs.py  engine.py
brain_games/games/: __init__.py  logic_calc.py  logic_even.py  logic_gcd.py  logic_prime.py  logic_progression.py
brain_games/logic/: logic_even.py  logic_gcd.py  logic_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  common_games_funcs.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
